--- a/index.html
+++ b/index.html
@@ -13,12 +13,31 @@
     <div class="bg_top">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-sm-3">header logo</div>
-                <div class="col-md-6 col-sm-9">header nav</div>
+                <div class=" logo col-md-5 col-sm-3 col-xs-2">
+                    <a href="#"><img src="images/VectorSmartObject.png" alt="logo"></a>
+                </div>
+                <div class="menu col-md-7 col-sm-9 col-xs-10">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#"> About</a></li>
+                            <li><a href="#">service</a></li>
+                            <li><a href="#">portfolio</a></li>
+                            <li><a href="#">contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-7">Luis Oenrique</div>
-                <div class="col-md-6 col-sm-5">img</div>
+                <div class=" connection col-md-6 col-sm-7">
+                    <h1>Luis Oenrique</h1>
+                    <p>User Experience / User Interface Expert</p>
+                    <a href="#">KNOW MORE</a>
+                    <a href="#">HIRE ME</a>
+                </div>
+                <div class="man_photo col-md-6 col-sm-5">
+                    <img src="images/man.png" alt="image">
+                </div>
             </div>
         </div>
     </div>
