Delete media.css, add next block.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="bg_top">
         <div class="container">
             <div class="row">
-                <div class=" logo col-md-5 col-sm-3 col-xs-2">
+                <div class=" logo col-md-5 col-sm-3 col-xs-6">
                     <a href="#"><img src="images/VectorSmartObject.png" alt="logo"></a>
                 </div>
-                <div class="menu col-md-7 col-sm-9 col-xs-10">
+                <div class="menu col-md-7 col-sm-9 col-xs-6">
                     <nav>
                         <ul>
                             <li><a href="#">Home</a></li>
@@ -43,31 +43,61 @@
     </div>
 </header>
 <section>
-    <div class="container">
+    <div class="container information">
         <div class="row">
-            <div class="col-md-6 col-sm-5">KNOW MORE ABOUT ME</div>
-            <div class="col-md-6 col-sm-7">img</div>
+            <div class="col-md-5 col-sm-5">
+                <h2>KNOW MORE ABOUT ME</h2>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                    Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                </p>
+                <a href="#">DOWNLOAD MY CV</a>
+            </div>
+            <div class="col-md-7 col-sm-7">
+                <img src="images/man_back.png" alt="photo">
+            </div>
+
         </div>
     </div>
     <article>
-        <div class="container">
-            <p>SERVICES</p>
+        <div class="container services">
+            <h3>SERVICES</h3>
             <div class="row">
-                <div class="col-md-4 col-sm-4">User Research</div>
-                <div class="col-md-4 col-sm-4">IA And Wireframes</div>
-                <div class="col-md-4 col-sm-4">User Testing</div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <img src="images/service_img_1.png" alt="img">
+                    <h4>User Research</h4>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    <img src="images/service_img_2.png" alt="img">
+                    <h4>IA And Wireframes</h4>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    <img src="images/service_img_3.png" alt="img">
+                    <h4>User Testing</h4>
+                </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-4">Looks and Feel Design (UI)</div>
-                <div class="col-md-4 col-sm-4">Delivery</div>
-                <div class="col-md-4 col-sm-4">Integration Support</div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <img src="images/service_img_4.png" alt="img">
+                    <h4>Looks and Feel Design (UI)</h4>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    <img src="images/service_img_5.png" alt="img">
+                    <h4>Delivery</h4>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-6">
+                    <img src="images/service_img_6.png" alt="img">
+                    <h4>Integration Support</h4>
+                </div>
             </div>
         </div>
     </article>
-    <div class="container">
-        <p>MY SKILLS</p>
+    <div class="container skills">
+        <h3>MY SKILLS</h3>
         <div class="row">
-            <div class="col-md-10">IMG</div>
+            <div class="col-md-12">
+                <img src="images/skills_img.png" alt="">
+            </div>
         </div>
     </div>
     <article>
