--- a/index.html
+++ b/index.html
@@ -9,25 +9,39 @@
     <title>Luis</title>
 </head>
 <body>
+
+</div>
 <header>
     <div class="bg_top">
         <div class="container">
-            <div class="row">
-                <div class=" logo col-md-5 col-sm-3 col-xs-6">
-                    <a href="#"><img src="images/VectorSmartObject.png" alt="logo"></a>
-                </div>
-                <div class="menu col-md-7 col-sm-9 col-xs-6">
-                    <nav>
-                        <ul>
+            <nav class="navbar navbar-default">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"><img src="images/VectorSmartObject.png"></a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                        <ul class="nav navbar-nav navbar-right">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#"> About</a></li>
+                            <li><a href="#">About</a></li>
                             <li><a href="#">service</a></li>
                             <li><a href="#">portfolio</a></li>
                             <li><a href="#">contact</a></li>
                         </ul>
-                    </nav>
-                </div>
-            </div>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+
             <div class="row">
                 <div class=" connection col-md-6 col-sm-7">
                     <h1>Luis Oenrique</h1>
@@ -49,7 +63,8 @@
                 <h2>KNOW MORE ABOUT ME</h2>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
                     Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
+                    enim.
                 </p>
                 <a href="#">DOWNLOAD MY CV</a>
             </div>
@@ -101,48 +116,163 @@
         </div>
     </div>
     <article>
-        <div class="container">
-            <p>PORTFOLIO</p>
+        <div class="container text-center portfolio">
+            <h3>PORTFOLIO</h3>
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-6">img</div>
-                <div class="col-md-4 col-sm-4 col-xs-6">img</div>
-                <div class="col-md-4 col-sm-4 col-xs-6">img</div>
-                <div class="col-md-4 col-sm-4 col-xs-6">img</div>
-                <div class="col-md-4 col-sm-4 col-xs-6">img</div>
-                <div class="col-md-4 col-sm-4 col-xs-6">img</div>
+                <div class="item col-md-4 col-sm-4 col-xs-6">
+                    <a href="#"><img src="images/portfolio_img_1.png"></a>
+                </div>
+                <div class="item col-md-4 col-sm-4 col-xs-6">
+                    <a href="#"><img src="images/portfolio_img_2.png"></a>
+                </div>
+                <div class="item col-md-4 col-sm-4 col-xs-6">
+                    <a href="#"><img src="images/portfolio_img_3.png"></a>
+                </div>
+                <div class="item col-md-4 col-sm-4 col-xs-6">
+                    <a href="#"><img src="images/portfolio_img_4.png"></a>
+                </div>
+                <div class="item col-md-4 col-sm-4 col-xs-6">
+                    <a href="#"><img src="images/portfolio_img_5.png"></a>
+                </div>
+                <div class="item col-md-4 col-sm-4 col-xs-6">
+                    <a href="#"><img src="images/portfolio_img_6.png"></a>
+                </div>
             </div>
+            <a class="portfolio-btn" href="#">LOAD MORE</a>
         </div>
     </article>
-    <div class="container">
-        <p>TESTIMONIALS</p>
+    <div class="container text-center slick">
+        <h3>TESTIMONIALS</h3>
         <div class="row">
-            <div class="col-md-10">SLIDER</div>
+            <div class="col-md-10 col-md-offset-1">
+                <div class="slider">
+                    <div class="slider-item">
+                        <div class="row">
+                            <div class="col-sm-3 col-sm-offset-1">
+                                <div class="slider-photo">
+                                    <img src="images/TESTIMONIALS_img.png" alt="">
+                                </div>
+                            </div>
+                            <div class="text-left col-sm-7">
+                                <h4>Limara tusi </h4>
+                                <h5>CEO, RanDOM COMPANY</h5>
+                                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    Aenean commodo ligula eget dolor. Aenean massa.
+                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                                    mus.
+                                    Donec quam felis, ultricies nec,
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <div class="row">
+                            <div class="col-sm-3 col-sm-offset-1">
+                                <div class="slider-photo">
+                                    <img src="images/TESTIMONIALS_img.png" alt="">
+                                </div>
+                            </div>
+                            <div class="text-left col-sm-7">
+                                <h4>Limara tusi </h4>
+                                <h5>CEO, RanDOM COMPANY</h5>
+                                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    Aenean commodo ligula eget dolor. Aenean massa.
+                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                                    mus.
+                                    Donec quam felis, ultricies nec,
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-item">
+                        <div class="row">
+                            <div class="col-sm-3 col-sm-offset-1">
+                                <div class="slider-photo">
+                                    <img src="images/TESTIMONIALS_img.png" alt="">
+                                </div>
+                            </div>
+                            <div class="text-left col-sm-7">
+                                <h4>Limara tusi </h4>
+                                <h5>CEO, RanDOM COMPANY</h5>
+                                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    Aenean commodo ligula eget dolor. Aenean massa.
+                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                                    mus.
+                                    Donec quam felis, ultricies nec,
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <article>
-        <div class="container">
+        <div class="container level">
             <div class="row">
-                <div class="col-md-3 col-sm-3 col-xs-6"> 120 Hands to Work</div>
-                <div class="col-md-3 col-sm-3 col-xs-6"> 310 Happy Client</div>
-                <div class="col-md-3 col-sm-3 col-xs-6"> 510 Finished Project</div>
-                <div class="col-md-3 col-sm-3 col-xs-6"> 720 Cups of Coffe</div>
+                <div class="col-sm-3 col-xs-6">
+                    <img src="images/work.png">
+                    <p>120</p>
+                    <h4>Hands to Work</h4>
+                </div>
+                <div class="col-sm-3 col-xs-6">
+                    <img src="images/happiness.png">
+                    <p>310</p>
+                    <h4>Happy Client</h4>
+                </div>
+                <div class="col-sm-3 col-xs-6">
+                    <img src="images/delivery-complete.png">
+                    <p>510</p>
+                    <h4>Finished Project</h4>
+                </div>
+                <div class="col-sm-3 col-xs-6">
+                    <img src="images/cup.png">
+                    <p>720</p>
+                    <h4>Cups of Coffe</h4>
+                </div>
             </div>
         </div>
     </article>
 </section>
 <footer>
     <div class="container">
-        <p>SAY HELLO!</p>
+        <h3 class="col-sm-4 col-sm-offset-4 text-center">sAY HELLO!</h3>
         <div class="row">
-            <div class="col-md-8 col-sm-10">form</div>
+            <form class="col-sm-8 col-sm-offset-2" action="" method="post">
+                <div class="row">
+                    <div class="form-group col-sm-6">
+                        <input type="email" class="form-control" id="example1" placeholder="Name">
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <input type="email" class="form-control" id="example2" placeholder="Email">
+                    </div>
+                    <div class="form-group col-sm-12">
+                        <textarea type="email" class="form-control" id="example4" placeholder="Message"></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn">SEND<img src="images/send-button.png"></button>
+                    </div>
+                </div>
+            </form>
+            <div class="social col-sm-4">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#"><i class="fab fa-behance"></i></a>
+                <a href="#"><i class="fab fa-dribbble"></i></a>
+            </div>
+            <h4 class="col-sm-4 text-center">2017. All Right Reserved</h4>
         </div>
     </div>
+    <a class="btn-up" href="#"><i class="fas fa-chevron-up"></i></a>
 </footer>
 <script
         src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/slick.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
