--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 <body>
 
-</div>
 <header>
     <div class="bg_top">
         <div class="container">
             <nav class="navbar navbar-default">
-                <div class="container">
+
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -39,17 +38,16 @@
                             <li><a href="#">contact</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
             </nav>
 
             <div class="row">
-                <div class=" connection col-md-6 col-sm-7">
+                <div class=" connection col-md-6 col-sm-7 col-xs-12">
                     <h1>Luis Oenrique</h1>
                     <p>User Experience / User Interface Expert</p>
                     <a href="#">KNOW MORE</a>
                     <a href="#">HIRE ME</a>
                 </div>
-                <div class="man_photo col-md-6 col-sm-5">
+                <div class="man_photo text-center col-md-6 col-sm-5 col-xs-12">
                     <img src="images/man.png" alt="image">
                 </div>
             </div>
@@ -59,7 +57,7 @@
 <section>
     <div class="container information">
         <div class="row">
-            <div class="col-md-5 col-sm-5">
+            <div class="col-md-5 col-sm-6 col-xs-12">
                 <h2>KNOW MORE ABOUT ME</h2>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
                     Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -68,7 +66,7 @@
                 </p>
                 <a href="#">DOWNLOAD MY CV</a>
             </div>
-            <div class="col-md-7 col-sm-7">
+            <div class="col-md-7 col-sm-6 col-xs-12">
                 <img src="images/man_back.png" alt="photo">
             </div>
 
@@ -236,11 +234,11 @@
 </section>
 <footer>
     <div class="container">
-        <h3 class="col-sm-4 col-sm-offset-4 text-center">sAY HELLO!</h3>
+        <h3 >sAY HELLO!</h3>
         <div class="row">
-            <form class="col-sm-8 col-sm-offset-2" action="" method="post">
+            <form class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1" action="" method="post">
                 <div class="row">
-                    <div class="form-group col-sm-6">
+                    <div class="form-group col-sm-6 ">
                         <input type="email" class="form-control" id="example1" placeholder="Name">
                     </div>
                     <div class="form-group col-sm-6">
